<?xml version="1.0"?>
<package format="3">
  <name>mz07l_description</name>
  <version>2.0.0</version>

  <description>mz07l description</description>

  <author email="jcyang@hkclr.hk">jcyang</author>
  <maintainer email="mskwok@hkclr.hk">mskwok</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
